Added initial support for rule flattening.