@@ -6,6 +6,7 @@ import masters.staticanalysistools.aggregator.service.AggregationService;
 import masters.staticanalysistools.aggregator.service.AnalysisSagaService;
 import masters.staticanalysistools.aggregator.service.ExchangeService;
 import masters.staticanalysistools.aggregator.service.ToolService;
+import masters.staticanalysistools.aggregator.service.command.AggregationCommand;
 import masters.staticanalysistools.aggregator.service.command.AnalysisCommand;
 import masters.staticanalysistools.aggregator.service.command.ParallelExchangeCommand;
 import masters.staticanalysistools.aggregator.service.dto.ExchangeServiceResponse;
@@ -13,9 +14,9 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.stereotype.Service;
 
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,13 +35,21 @@ public class AnalysisSagaServiceImpl implements AnalysisSagaService {
         final ParallelExchangeCommand<AnalysisCommand> parallelExchangeCommand =
             ParallelExchangeCommand.<AnalysisCommand>builder().urls(tools.values()).body(analysisCommand).build();
         final List<ExchangeServiceResponse<Sarif>> exchangeServiceResponses =
-            exchangeService.requestMultipleSarifAnalysisInParallel(parallelExchangeCommand,
+            exchangeService.requestMultipleInParallel(parallelExchangeCommand,
                 new ParameterizedTypeReference<>() {
                 });
 
         final List<Sarif> sarifList =
-            exchangeServiceResponses.stream().map(ExchangeServiceResponse::getResult).collect(Collectors.toList());
-        return aggregationService.aggregate(sarifList);
+            exchangeServiceResponses.stream().map(ExchangeServiceResponse::getResult).toList();
+
+        final AggregationCommand aggregationCommand =
+            AggregationCommand.builder()
+                .sarifs(sarifList)
+                .flattenViolations(analysisCommand.getFlattenViolations())
+                .preferedTools(Collections.emptySet())
+                .build();
+
+        return aggregationService.aggregate(aggregationCommand);
     }
 
 }
